language/move-lang/tests/move_check/parser/native_main.exp
error: 

   ┌── tests/move_check/parser/native_main.move:1:1 ───
   │
 1 │ native main();
   │ ^ Native functions can only be declared inside a module
   │

